# intelligent_world

./: .gitignore  AGENTS.md  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  minimal_alife_project_overview.md  pyproject.toml  technical_design_spec.md  unified_review.md
.github/workflows/: ci.yml
configs/: default.yaml
docs/: experiment_campaign_report.md
docs/legacy/: minimal_alife_project_overview.md  technical_design_spec.md
scripts/: analyze_campaign.py  ast_feasibility_spike.py  docker_latency_spike.py  experiment_campaign.py  metrics_report.py  mutation_viability_spike.py  parameter_sweep.py  schedule_curve_spike.py
src/alife_core/: __init__.py  cli.py  models.py  runtime.py
src/alife_core/agent/: __init__.py  curriculum.py  lifecycle.py
src/alife_core/bootstrap/: __init__.py
src/alife_core/evaluator/: core.py  docker_pool.py
src/alife_core/logging/: __init__.py  events.py
src/alife_core/metrics/: __init__.py  evolution.py
src/alife_core/mutation/: __init__.py  llm.py  semantic.py  validation.py
src/alife_core/tasks/: __init__.py  builtin.py
tests/: test_agent_lifecycle.py  test_analyze_campaign.py  test_bootstrap.py  test_cli.py  test_curriculum.py  test_docker_pool.py  test_evaluator.py  test_experiment_campaign.py  test_llm_mutation.py  test_logging.py  test_metrics.py  test_runtime.py  test_security.py  test_semantic_mutation.py  test_spikes.py  test_tasks.py
